Mon Feb 20 15:03:01 2006  Wallace Zhang  <zhangw@ociweb.com>

        * ACE version 5.4.10 released.

Sun Feb 19 13:38:32 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release:
          Fixed bug in excluding of mwc files

Fri Feb 17 19:16:32 UTC 2006  Wallace Zhang  <zhangw@ociweb.com>

        * NEWS:

          Updated this file with more inputs.

Thu Feb 16 13:38:39 2006  Wallace Zhang  <zhangw@ociweb.com>

        * bin/generate_rel_manpages:

          Updated the script with latest info at naboo.dre.

Thu Feb 16 13:38:00 UTC  Simon Massey  <sma@prismtech.com>

        * bin/tao_orb_tests.lst:
          Added regression test for Bugzilla 2403

Thu Feb 16 09:23:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release:
          Changed the exclude of mwc files, use TAO_* and CIAO_*

Thu Feb 16 08:33:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/performance_stats.sh:
          Added AMI to the combined performance figure

Wed Feb 15 20:06:42 2006  Douglas C. Schmidt  <schmidt@cse.wustl.edu>

        * ace/Timer_Heap_T.cpp: Fixed cancel() so that it doesn't miss any
          nodes due to reheapifying during a remove.  Thanks to Oh Yoon
          Sik <boom at estsoft dot com> for this fix.

Wed Feb 15 20:04:13 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          #include <sys/time.h> in ACE_HAS_POSIX_TIME feature test (if
          supported by platform).  Thanks to Vladimir Panov <gbr at
          voidland dot org> for reporting this bug.

Wed Feb 15 19:58:36 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * bin/fuzz.pl:

          Modified the check_for_long_file_names function to correctly deal
          with the length of the MPC project names instead of the length of
          the .mpc file itself.  The length of the .mpc file name does not
          necessarily indicate the length of the generated project name.
