@@ -2068,6 +2068,7 @@ William Byrne <williamb at codics dot com>
 Karl Schmitt <Karl dot Schmitt at dfs dot de>
 Ron DeAngelis <rdeangel at rite-solutions dot com>
 Alex Sheh <ASHEH at euphonix dot com>
+Daniel Wagner <__daniel___ at icg do tu-graz dot ac dot at>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
