@@ -74,6 +74,10 @@
 #   define ACE_DEFAULT_BACKLOG 5
 # endif /* ACE_DEFAULT_BACKLOG */
 
+# if !defined (ACE_DEFAULT_ASYNCH_BACKLOG)
+#   define ACE_DEFAULT_ASYNCH_BACKLOG 5
+# endif /* ACE_DEFAULT_ASYNCH_BACKLOG */
+
 # if !defined (ACE_DEFAULT_THREADS)
 #   define ACE_DEFAULT_THREADS 1
 # endif /* ACE_DEFAULT_THREADS */
